# debtfactory

./: Sample.txt  rule_engine_gap_analysis.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRE sheet Ver 4(Sheet1).csv  Bank Eligibility Matrix.xlsx  DELIVERY_SUMMARY.md  Makefile  README.md  TEAM_ONBOARDING.md  alembic.ini  compose.dev.yaml  compose.prod.yaml  compose.yaml  dev.ps1  postman_rule_engine_failures.txt  prompt.md  pyproject.toml  skill.md
backend/.github/: CODEOWNERS  labeler.yml  pull_request_template.md
backend/.github/workflows/: cd.yml  ci.yml
backend/.obsidian/: graph.json  workspace.json
backend/docker/api/: Dockerfile  entrypoint.sh
backend/docker/postgres/: init.sql
backend/docker/redis/: redis.conf
backend/docs/: architecture.md  ci_cd_guide.md  git_workflow.md  service_template.md  test_scenarios.md  workflow.md
backend/docs/adr/: 0001-modular-monolith.md
backend/docs/knowledge/: Database Migrations.md  Decisions.md  Docker & Data Stores.md  Environment & Tooling.md  Index.md  Rule Engine.md  Troubleshooting Log.md
backend/migrations/: env.py
backend/migrations/sql/auth/: 0001_init.down.sql  0001_init.up.sql
backend/migrations/sql/domain_logs/: 0001_init.down.sql  0001_init.up.sql
backend/postman/: DebtFactory-RuleEngine-V4-MultiView.postman_collection.json  DebtFactory-RuleEngine.postman_collection.json  RuleEngine-NotEligible.postman_collection.json
backend/requirements/: base.in  dev.in
backend/requirements/services/: auth.in  domain_logs.in  ocr_jobs.in  rule_engine.in
backend/scripts/: BRE_sheet.xlsx  add_v4_columns.py  bre_dump.md  compile_requirements.sh  generate_jdm.py  inspect_sheets.py  migrate_sql.py  seed_db.py  transpose_bre.py  update_postman.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  health.py  router_registry.py
backend/src/app/common/: __init__.py
backend/src/app/common/schemas/: __init__.py  base.py
backend/src/app/common/utils/: datetime.py
backend/src/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  pagination.py  security.py  settings_registry.py
backend/src/app/services/: __init__.py
backend/src/app/services/auth/: README.md  __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/app/services/domain_logs/: README.md  __init__.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/app/services/ocr_jobs/: README.md  __init__.py  config.py  constants.py  dependencies.py  (+5 more)
backend/tests/: conftest.py
backend/tests/core/: test_health.py
backend/tests/services/domain_logs/: __init__.py
backend/tests/services/ocr_jobs/: __init__.py
backend/tests/services/rule_engine/: __init__.py  conftest.py
(+77 files in other folders)
